src/parser.rs
use std::collections::VecDeque;
use crate::token::{Token, TokenKind};
use crate::lexer::Lexer;
use crate::source::Span;
use crate::ast::*; 

#[derive(Debug, Clone)]
pub struct ParseError {
    pub expected: String,
    pub found: TokenKind,
    pub span: Span,
    pub message: String,
}

pub type ParseResult<T> = Result<T, ParseError>;

/// 负责 Token 流的管理：缓冲、预读、过滤错误
struct TokenStream<'a> {
    lexer: Lexer<'a>,
    /// 环形缓冲区：buffer[0] 是 current, buffer[1] 是 next...
    buffer: VecDeque<Token>,
    /// 记录上一个被消费的 Token 的 Span (用于 EOF 时的报错定位)
    last_span: Span,
    base_offset: usize,
}

impl<'a> TokenStream<'a> {
    fn new(lexer: Lexer<'a>, base_offset: usize) -> Self {
        Self {
            lexer,
            buffer: VecDeque::new(),
            // 初始 span
            last_span: Span::new(0, 0), 
            base_offset
        }
    }

    /// 确保缓冲区里至少有 n+1 个 Token (用于 peek(n))
    fn fill(&mut self, n: usize) {
        while self.buffer.len() <= n {
            let mut tok = self.lexer.next_token();
            
            // 入队前做好span map
            if tok.kind != TokenKind::EOF {
                tok.span.start += self.base_offset;
                tok.span.end += self.base_offset;
            } else {
                // EOF 位置是 local len，也加上 base
                tok.span.start += self.base_offset;
                tok.span.end += self.base_offset;
            }

            self.buffer.push_back(tok);
            if tok.kind == TokenKind::EOF { break; }
        }
    }

    /// 查看第 n 个 Token (不消耗)
    fn peek(&mut self, n: usize) -> Token {
        self.fill(n);
        // 如果 n 越界（说明已经全是 EOF 了），返回 buffer 里的最后一个（必定是 EOF）
        *self.buffer.get(n).unwrap_or_else(|| self.buffer.back().unwrap())
    }

    /// 消耗当前 Token 并前进
    fn advance(&mut self) -> Token {
        self.fill(0);
        let tok = self.buffer.pop_front().unwrap_or_else(|| {
            Token::new(TokenKind::EOF, self.last_span.end, self.last_span.end) 
        });
        self.last_span = tok.span;
        tok
    }
}

// ==========================================
// Parser 主体
// ==========================================

pub struct Parser<'a> {
    source: &'a str,      
    stream: TokenStream<'a>,
    pub errors: Vec<ParseError>,
    // 专门用于错误恢复：记录上一个被 consume 的 token 类型
    previous_kind: TokenKind,
    node_id_counter: &'a mut u32,
}

impl<'a> Parser<'a> {
    pub fn new(source: &'a str, lexer: Lexer<'a>, base_offset: usize, id_counter: &'a mut u32) -> Self {
        Self {
            source,
            stream: TokenStream::new(lexer, base_offset),
            errors: Vec::new(),
            previous_kind: TokenKind::EOF,
            node_id_counter: id_counter, // 绑定引用
        }
    }

    // === Level 0: Stream Wrapper ===

    fn peek(&mut self) -> Token {
        self.stream.peek(0)
    }

    fn check(&mut self, kind: TokenKind) -> bool {
        self.peek().kind == kind
    }
    
    // 支持无限向前看：check_nth(1) == next, check_nth(2) == next next
    fn check_nth(&mut self, n: usize, kind: TokenKind) -> bool {
        self.stream.peek(n).kind == kind
    }

    fn is_at_end(&mut self) -> bool {
        self.peek().kind == TokenKind::EOF
    }

    fn advance(&mut self) -> Token {
        let tok = self.stream.advance();
        self.previous_kind = tok.kind;
        tok
    }
    
    fn previous_span(&self) -> Span {
        self.stream.last_span
    }

    // === Level 1: Expect / Consume ===

    pub fn consume(&mut self, kind: TokenKind) -> Option<Token> {
        if self.check(kind) {
            Some(self.advance())
        } else {
            None
        }
    }

    /// 多选尝试消费：尝试匹配列表中的任意一个。
    /// 场景：处理运算符 ( + | - ) 或者可选符号
    /// 成功 -> 消耗 Token，返回 true
    /// 失败 -> 不动指针，返回 false
    pub fn match_token(&mut self, kinds: &[TokenKind]) -> bool {
        for &kind in kinds {
            if self.check(kind) {
                self.advance();
                return true;
            }
        }
        false
    }

    pub fn expect(&mut self, kind: TokenKind) -> ParseResult<Token> {
        if let Some(token) = self.consume(kind) {
            Ok(token)
        } else {
            let current = self.peek();
            Err(ParseError {
                expected: kind.as_str().to_string(),
                found: current.kind,
                span: current.span,
                message: format!("Expected '{}'", kind.as_str()),
            })
        }
    }
    
    pub fn synchronize(&mut self) {
        // 必须先吃掉那个导致报错的“坏”Token，打破死循环
        self.advance();

        while !self.is_at_end() {
            // A. 检查上一位：如果刚吃掉的是分号，说明上一句结束了，这里是安全的开始
            if self.previous_kind == TokenKind::Semi {
                return;
            }

            // B. 检查当前位：如果是这些关键字，说明新的一句/声明开始了
            match self.peek().kind {
                // --- 顶层定义 (Top Level) ---
                TokenKind::Struct | 
                TokenKind::Union | 
                TokenKind::Enum | 
                TokenKind::Fn | 
                TokenKind::Mod | 
                TokenKind::Use | 
                TokenKind::Imp | 
                TokenKind::Typedef | 
                TokenKind::Typealias |
                TokenKind::Pub | 

                // --- 变量声明 (DeclStmt) ---
                TokenKind::Set | 
                TokenKind::Mut | 
                TokenKind::Const |

                // --- 流程控制语句 (Statements) ---
                TokenKind::If | 
                TokenKind::While | 
                TokenKind::Switch | 
                TokenKind::Ret | 
                TokenKind::Break | 
                TokenKind::Continue 
                => {
                    return;
                }
                
                // 其他情况继续跳过
                _ => {}
            }

            self.advance();
        }
    }

    /// 获取 Token 对应的源码文本
    pub fn text(&self, token: Token) -> &'a str {
        // Token 的 span 是全局偏移量 (包含 base_offset)
        // self.source 是当前文件的局部源码 (从 0 开始)
        // 所以必须减去 base_offset 才能正确切片
        let offset = self.stream.base_offset;
        
        // 安全检查
        if token.span.start < offset {
            panic!("Token start {} is smaller than base offset {}", token.span.start, offset);
        }
        
        let local_start = token.span.start - offset;
        let local_end = token.span.end - offset;
        
        &self.source[local_start..local_end]
    }

    /// 辅助函数：分配下一个 ID
    fn next_id(&mut self) -> NodeId {
        let id = *self.node_id_counter;
        *self.node_id_counter += 1;
        NodeId(id)
    }

    // 辅助函数：处理字符串转义
    fn unescape_string(&self, raw: &str) -> String {
        let mut result = String::new();
        let mut chars = raw.chars();
        
        while let Some(c) = chars.next() {
            if c == '\\' {
                match chars.next() {
                    Some('n') => result.push('\n'),
                    Some('r') => result.push('\r'),
                    Some('t') => result.push('\t'),
                    Some('\\') => result.push('\\'),
                    Some('"') => result.push('"'),
                    Some('0') => result.push('\0'),
                    Some(other) => {
                        // 未知转义，保留原样
                        result.push('\\');
                        result.push(other);
                    }
                    None => {
                        // 结尾是 \，忽略
                        break;
                    }
                }
            } else {
                result.push(c);
            }
        }
        result
    }

}

/// ======================================================
/// 解析类型
/// ======================================================

impl<'a> Parser<'a> {
    /// EBNF: Type -> PointerType | ArrayOrAtom
    pub fn parse_type(&mut self) -> ParseResult<Type> {
        // PointerType 以 '*' 或 '^' 开头
        if self.check(TokenKind::Star) || self.check(TokenKind::Caret) {
            return self.parse_pointer_type();
        }
        
        // 否则进入 ArrayOrAtom 分支
        self.parse_array_or_atom()
    }

    /// EBNF: PointerType -> ( "*" | "^" ) Type
    fn parse_pointer_type(&mut self) -> ParseResult<Type> {
        let op_token = self.advance(); // 吃掉 '*' 或 '^'
        let start = op_token.span.start;
        
        // 递归调用 parse_type，因为指针可以多层 (**T)
        let inner_type = self.parse_type()?;
        let end = inner_type.span.end;

        let mutability = if op_token.kind == TokenKind::Star {
            Mutability::Mutable // *T
        } else {
            Mutability::Constant // ^T
        };

        Ok(Type {
            id: self.next_id(),
            kind: TypeKind::Pointer {
                inner: Box::new(inner_type),
                mutability,
            },
            span: Span::new(start, end),
        })
    }

    /// EBNF: ArrayOrAtom -> AtomType { "[" INT "]" }
    fn parse_array_or_atom(&mut self) -> ParseResult<Type> {
        // 1. 解析基础原子类型
        let mut ty = self.parse_atom_type()?;

        // 2. 循环处理后缀：只要后面是 '['，就说明是数组
        while self.match_token(&[TokenKind::LBracket]) {
            // EBNF: "[" INT "]"
            let size_token = self.expect(TokenKind::Integer)?;
            
            // 解析数组大小
            // TODO: const expr
            let size_str = self.text(size_token);
            let size = size_str.parse::<u64>().map_err(|_| ParseError {
                expected: "Integer that fits in u64".into(),
                found: size_token.kind,
                span: size_token.span,
                message: "Array size is too large".into(),
            })?;

            let end_token = self.expect(TokenKind::RBracket)?;
            
            // 构造新的 ArrayType，包裹住之前的 type
            // i32[10] -> Array(inner: i32, size: 10)
            let new_span = Span::new(ty.span.start, end_token.span.end);
            ty = Type {
                id: self.next_id(),
                kind: TypeKind::Array {
                    inner: Box::new(ty),
                    size,
                },
                span: new_span,
            };
        }

        Ok(ty)
    }

    /// EBNF: AtomType -> PrimitiveType | FunctionType | Path | "(" Type ")"
    fn parse_atom_type(&mut self) -> ParseResult<Type> {
        let token = self.peek();
        let span = token.span;

        match token.kind {
            // 1. 基础类型 (PrimitiveType)
            TokenKind::I8 | TokenKind::U8 | TokenKind::I16 | TokenKind::U16 |
            TokenKind::I32 | TokenKind::U32 | TokenKind::I64 | TokenKind::U64 |
            TokenKind::Isize | TokenKind::Usize |
            TokenKind::F32 | TokenKind::F64 | TokenKind::Bool => {
                self.advance();
                let prim = self.token_kind_to_primitive(token.kind);
                Ok(Type {
                    id: self.next_id(),
                    kind: TypeKind::Primitive(prim),
                    span,
                })
            }

            // 2. 函数指针类型 (FunctionType) -> "fn" ...
            TokenKind::Fn => self.parse_function_type(),

            // 3. 命名类型 (Path) -> Identifier ...
            TokenKind::Identifier => {
                let path = self.parse_path()?;
                let end = path.span.end; // path 包含自己的 span
                Ok(Type {
                    id: self.next_id(),
                    kind: TypeKind::Named(path),
                    span: Span::new(span.start, end),
                })
            }

            // 4. 括号类型 "(" Type ")"
            TokenKind::LParen => {
                self.advance(); // 吃掉 '('
                let inner = self.parse_type()?;
                let end_token = self.expect(TokenKind::RParen)?;
                Ok(Type {
                    id: self.next_id(),
                    kind: inner.kind, // 括号只是改变解析优先级，不改变 AST 结构
                    span: Span::new(span.start, end_token.span.end),
                })
            }

            _ => Err(ParseError {
                expected: "Type (primitive, identifier, fn, or pointer)".into(),
                found: token.kind,
                span,
                message: "Expected a type here".into(),
            }),
        }
    }

    /// EBNF: FunctionType -> "fn" "(" [ TypeList ] ")" [ "->" Type ]
    fn parse_function_type(&mut self) -> ParseResult<Type> {
        let start_token = self.expect(TokenKind::Fn)?; // 必须是 fn
        self.expect(TokenKind::LParen)?;

        let mut params = Vec::new();
        
        // 解析参数列表 TypeList -> Type { "," Type }
        if !self.check(TokenKind::RParen) {
            loop {
                params.push(self.parse_type()?);
                if !self.match_token(&[TokenKind::Comma]) {
                    break;
                }
            }
        }

        self.expect(TokenKind::RParen)?;

        // 解析可选的返回值 [ "->" Type ]
        let mut ret_type = None;
        let mut end_pos = self.previous_span().end; // 默认为 ')' 的位置

        if self.match_token(&[TokenKind::Arrow]) {
            let ret = self.parse_type()?;
            end_pos = ret.span.end;
            ret_type = Some(Box::new(ret));
        }

        Ok(Type {
            id: self.next_id(),
            kind: TypeKind::Function {
                params,
                ret_type,
            },
            span: Span::new(start_token.span.start, end_pos),
        })
    }

    // === 辅助函数 ===

    /// Path 解析：Ident { :: Ident }
    pub fn parse_path(&mut self) -> ParseResult<Path> {
        let mut segments = Vec::new();
        let start_pos = self.peek().span.start;
        
        // 第一个必然是 Ident
        let first = self.expect(TokenKind::Identifier)?;
        segments.push(Identifier { 
            name: self.text(first).to_string(), 
            span: first.span 
        });

        // 循环解析 :: Ident
        while self.match_token(&[TokenKind::ColonColon]) {
            let seg = self.expect(TokenKind::Identifier)?;
            segments.push(Identifier { 
                name: self.text(seg).to_string(), 
                span: seg.span 
            });
        }

        let end_pos = segments.last().unwrap().span.end;
        Ok(Path {
            id: self.next_id(),
            segments,
            span: Span::new(start_pos, end_pos),
        })
    }

    /// 将 TokenKind 转换为 PrimitiveType 枚举
    fn token_kind_to_primitive(&self, kind: TokenKind) -> PrimitiveType {
        match kind {
            TokenKind::I8 => PrimitiveType::I8,
            TokenKind::U8 => PrimitiveType::U8,
            TokenKind::I16 => PrimitiveType::I16,
            TokenKind::U16 => PrimitiveType::U16,
            TokenKind::I32 => PrimitiveType::I32,
            TokenKind::U32 => PrimitiveType::U32,
            TokenKind::I64 => PrimitiveType::I64,
            TokenKind::U64 => PrimitiveType::U64,
            TokenKind::Isize => PrimitiveType::ISize,
            TokenKind::Usize => PrimitiveType::USize,
            TokenKind::F32 => PrimitiveType::F32,
            TokenKind::F64 => PrimitiveType::F64,
            TokenKind::Bool => PrimitiveType::Bool,
            _ => unreachable!("Not a primitive token"),
        }
    }
}

impl<'a> Parser<'a> {
    // ==========================================
    // 表达式解析 
    // ==========================================

    /// 入口：Expression -> LogicOr
    pub fn parse_expr(&mut self) -> ParseResult<Expression> {
        self.parse_logic_or()
    }

    /// Level 1: LogicOr -> LogicAnd { "or" LogicAnd }
    fn parse_logic_or(&mut self) -> ParseResult<Expression> {
        let mut lhs = self.parse_logic_and()?;

        while self.match_token(&[TokenKind::Or]) {
            let op = BinaryOperator::LogicalOr;
            let rhs = self.parse_logic_and()?;
            
            let span = Span::new(lhs.span.start, rhs.span.end);
            lhs = Expression {
                id: self.next_id(),
                kind: ExpressionKind::Binary { lhs: Box::new(lhs), op, rhs: Box::new(rhs) },
                span,
            };
        }
        Ok(lhs)
    }

    /// Level 2: LogicAnd -> Equality { "and" Equality }
    fn parse_logic_and(&mut self) -> ParseResult<Expression> {
        let mut lhs = self.parse_equality()?;

        while self.match_token(&[TokenKind::And]) {
            let op = BinaryOperator::LogicalAnd;
            let rhs = self.parse_equality()?;
            
            let span = Span::new(lhs.span.start, rhs.span.end);
            lhs = Expression {
                id:self.next_id(),
                kind: ExpressionKind::Binary { lhs: Box::new(lhs), op, rhs: Box::new(rhs) },
                span,
            };
        }
        Ok(lhs)
    }

    /// Level 3: Equality -> Relational { ("=="|"!=") Relational }
    fn parse_equality(&mut self) -> ParseResult<Expression> {
        let mut lhs = self.parse_relational()?;

        while self.match_token(&[TokenKind::EqEq, TokenKind::NeEq]) {
            let op = match self.previous_kind {
                TokenKind::EqEq => BinaryOperator::Equal,
                TokenKind::NeEq => BinaryOperator::NotEqual,
                _ => unreachable!(),
            };
            let rhs = self.parse_relational()?;
            
            let span = Span::new(lhs.span.start, rhs.span.end);
            lhs = Expression {
                id: self.next_id(),
                kind: ExpressionKind::Binary { lhs: Box::new(lhs), op, rhs: Box::new(rhs) },
                span,
            };
        }
        Ok(lhs)
    }

    /// Level 4: Relational -> Shift
    fn parse_relational(&mut self) -> ParseResult<Expression> {
        let mut lhs = self.parse_shift()?;

        while self.match_token(&[TokenKind::Lt, TokenKind::LtEq, TokenKind::Gt, TokenKind::GtEq]) {
            let op = match self.previous_kind {
                TokenKind::Lt => BinaryOperator::Less,
                TokenKind::LtEq => BinaryOperator::LessEqual,
                TokenKind::Gt => BinaryOperator::Greater,
                TokenKind::GtEq => BinaryOperator::GreaterEqual,
                _ => unreachable!(),
            };
            let rhs = self.parse_shift()?;
            
            let span = Span::new(lhs.span.start, rhs.span.end);
            lhs = Expression {
                id: self.next_id(),
                kind: ExpressionKind::Binary { lhs: Box::new(lhs), op, rhs: Box::new(rhs) },
                span,
            };
        }
        Ok(lhs)
    }

    // Level 5: Shift -> Additive { ("<"|"<="|">"|">=") Additive }
    fn parse_shift(&mut self) -> ParseResult<Expression> {
        let mut lhs = self.parse_additive()?;

        while self.match_token(&[TokenKind::Shl, TokenKind::Shr]) {
            let op = match self.previous_kind {
                TokenKind::Shl => BinaryOperator::ShiftLeft,
                TokenKind::Shr => BinaryOperator::ShiftRight,
                _ => unreachable!(),
            };
            let rhs = self.parse_additive()?;
            let span = Span::new(lhs.span.start, rhs.span.end);
            lhs = Expression {
                id: self.next_id(),
                kind: ExpressionKind::Binary { lhs: Box::new(lhs), op, rhs: Box::new(rhs) },
                span,
            };
        }
        Ok(lhs)
    }

    /// Level 6: Additive -> Multiplicative { ("+"| "-" | "bor" | "xor") Multiplicative }
    fn parse_additive(&mut self) -> ParseResult<Expression> {
        let mut lhs = self.parse_multiplicative()?;

        while self.match_token(&[TokenKind::Plus, TokenKind::Minus, TokenKind::BitOr, TokenKind::Xor]) {
            let op = match self.previous_kind {
                TokenKind::Plus => BinaryOperator::Add,
                TokenKind::Minus => BinaryOperator::Subtract,
                TokenKind::BitOr => BinaryOperator::BitwiseOr,
                TokenKind::Xor => BinaryOperator::BitwiseXor,
                _ => unreachable!(),
            };
            let rhs = self.parse_multiplicative()?;
            
            let span = Span::new(lhs.span.start, rhs.span.end);
            lhs = Expression {
                id: self.next_id(),
                kind: ExpressionKind::Binary { lhs: Box::new(lhs), op, rhs: Box::new(rhs) },
                span,
            };
        }
        Ok(lhs)
    }

    /// Level 7: Multiplicative -> Unary { ("*" | "/" | "%" | "band") Unary }
    fn parse_multiplicative(&mut self) -> ParseResult<Expression> {
        let mut lhs = self.parse_unary()?;

        while self.match_token(&[TokenKind::Star, TokenKind::Slash, TokenKind::Percent, TokenKind::BitAnd]) {
            let op = match self.previous_kind {
                TokenKind::Star => BinaryOperator::Multiply,
                TokenKind::Slash => BinaryOperator::Divide,
                TokenKind::Percent => BinaryOperator::Modulo,
                TokenKind::BitAnd => BinaryOperator::BitwiseAnd,
                _ => unreachable!(),
            };
            let rhs = self.parse_unary()?;
            
            let span = Span::new(lhs.span.start, rhs.span.end);
            lhs = Expression {
                id: self.next_id(),
                kind: ExpressionKind::Binary { lhs: Box::new(lhs), op, rhs: Box::new(rhs) },
                span,
            };
        }
        Ok(lhs)
    }

    /// Level 8: Unary -> ("-" | "!") Unary | Postfix
    fn parse_unary(&mut self) -> ParseResult<Expression> {
        // 检查前缀运算符
        if self.match_token(&[TokenKind::Minus, TokenKind::Bang]) {
            let start = self.previous_span().start;
            let op = match self.previous_kind {
                TokenKind::Minus => UnaryOperator::Negate,
                TokenKind::Bang => UnaryOperator::Not,
                _ => unreachable!(),
            };
            
            // 递归解析右侧 (允许连续: !!x, --x)
            let operand = self.parse_unary()?;
            let span = Span::new(start, operand.span.end);
            
            return Ok(Expression {
                id: self.next_id(),
                kind: ExpressionKind::Unary { op, operand: Box::new(operand) },
                span,
            });
        }

        // 如果不是前缀，解析后缀/Primary
        self.parse_postfix()
    }

    /// Level 9: Postfix -> Primary { ... }
    fn parse_postfix(&mut self) -> ParseResult<Expression> {
        let mut expr = self.parse_primary()?;

        loop {
            if self.match_token(&[TokenKind::LParen]) {
                // 1. 函数调用: expr(args)
                let args = self.parse_arguments()?; 
                let end_token = self.expect(TokenKind::RParen)?;
                let span = Span::new(expr.span.start, end_token.span.end);
                
                expr = Expression {
                    id: self.next_id(),
                    kind: ExpressionKind::Call { callee: Box::new(expr), arguments: args },
                    span,
                };

            } else if self.match_token(&[TokenKind::LBracket]) {
                // 2. 索引: expr[index]
                let index = self.parse_expr()?;
                let end_token = self.expect(TokenKind::RBracket)?;
                let span = Span::new(expr.span.start, end_token.span.end);

                expr = Expression {
                    id: self.next_id(),
                    kind: ExpressionKind::Index { target: Box::new(expr), index: Box::new(index) },
                    span,
                };

            } else if self.match_token(&[TokenKind::Dot]) {
                // 3. 字段访问: expr.ident
                let name = self.expect(TokenKind::Identifier)?;
                let ident = Identifier { name: self.text(name).to_string(), span: name.span };
                
                // 检查是否是方法调用: expr.method(...)
                if self.check(TokenKind::LParen) {
                    self.advance(); // 吃掉 '('
                    let args = self.parse_arguments()?;
                    let end_token = self.expect(TokenKind::RParen)?;
                    let span = Span::new(expr.span.start, end_token.span.end);

                    expr = Expression {
                        id: self.next_id(),
                        kind: ExpressionKind::MethodCall { 
                            receiver: Box::new(expr), 
                            method_name: ident, 
                            arguments: args 
                        },
                        span,
                    };
                } else {
                    // 只是字段访问
                    let span = Span::new(expr.span.start, name.span.end);
                    expr = Expression {
                        id: self.next_id(),
                        kind: ExpressionKind::FieldAccess { receiver: Box::new(expr), field_name: ident },
                        span,
                    };
                }

            } else if self.match_token(&[TokenKind::As]) {
                // 4. 类型转换: expr as Type
                let target_type = self.parse_type()?;
                let span = Span::new(expr.span.start, target_type.span.end);
                
                expr = Expression {
                    id: self.next_id(),
                    kind: ExpressionKind::Cast { expr: Box::new(expr), target_type },
                    span,
                };

            } else if self.match_token(&[TokenKind::Caret]) {
                // 5. 后缀解引用: ptr^
                let span = Span::new(expr.span.start, self.previous_span().end);
                expr = Expression {
                    id: self.next_id(),
                    kind: ExpressionKind::Unary { op: UnaryOperator::Dereference, operand: Box::new(expr) },
                    span,
                };

            } else if self.match_token(&[TokenKind::Ampersand]) {
                // 6. 后缀取地址: val&
                let span = Span::new(expr.span.start, self.previous_span().end);
                expr = Expression {
                    id: self.next_id(),
                    kind: ExpressionKind::Unary { op: UnaryOperator::AddressOf, operand: Box::new(expr) },
                    span,
                };
            
            } else if self.match_token(&[TokenKind::ColonColon]) {
                // 7. 命名空间访问 (EBNF: :: Identifier)
                let name = self.expect(TokenKind::Identifier)?;
                let ident = Identifier { name: self.text(name).to_string(), span: name.span };
                let span = Span::new(expr.span.start, name.span.end);
                
                // 明确使用 StaticAccess
                expr = Expression {
                    id: self.next_id(),
                    kind: ExpressionKind::StaticAccess { 
                        target: Box::new(expr), 
                        member: ident 
                     },
                     span,
                };
            } else {
                break;
            }
        }
        Ok(expr)
    }

    /// Level 9: Primary -> Literal | Path | StructLiteral | "(" Expr ")"
    fn parse_primary(&mut self) -> ParseResult<Expression> {
        let token = self.peek();

        match token.kind {
            // 字面量
            TokenKind::Integer | TokenKind::Float | TokenKind::StringLit | 
            TokenKind::CharLit | TokenKind::True | TokenKind::False => {
                self.advance();
                let lit = self.token_to_literal(token)?;
                Ok(Expression {
                    id: self.next_id(),
                    kind: ExpressionKind::Literal(lit),
                    span: token.span,
                })
            }

            // 括号表达式
            TokenKind::LParen => {
                self.advance();
                let expr = self.parse_expr()?;
                self.expect(TokenKind::RParen)?;
                Ok(expr) //? 包裹一个 ParenExpr 节点
            }

            // 路径 OR 结构体初始化
            // Path:   std::io::File
            // Struct: std::io::File { fd: 1 }
            TokenKind::Identifier => {
                let path = self.parse_path()?; 
                
                // 如果后面跟着 '{'，则是结构体初始化
                if self.check(TokenKind::LBrace) {
                    self.parse_struct_literal(path)
                } else {
                    // 否则就是纯路径（变量名/枚举值）
                    Ok(Expression {
                        id: self.next_id(),
                        kind: ExpressionKind::Path(path.clone()),
                        span: path.span,
                    })
                }
            }

            //  self 作为表达式 
            TokenKind::SelfVal => {
                let tok = self.advance();
                Ok(Expression {
                    id: self.next_id(),
                    // 将 self 视为名为 "self" 的 Path
                    kind: ExpressionKind::Path(Path { 
                        id: self.next_id(),
                        segments: vec![Identifier { name: "self".to_string(), span: tok.span }], 
                        span: tok.span 
                    }),
                    span: tok.span,
                })
            }

            _ => Err(ParseError {
                expected: "Expression".into(),
                found: token.kind,
                span: token.span,
                message: "Expected expression".into(),
            }),
        }
    }

    // ==========================================
    // 表达式辅助函数
    // ==========================================

    /// 解析函数参数列表: expr, expr, expr (不包含括号)
    fn parse_arguments(&mut self) -> ParseResult<Vec<Expression>> {
        let mut args = Vec::new();
        if !self.check(TokenKind::RParen) {
            loop {
                args.push(self.parse_expr()?);
                if !self.match_token(&[TokenKind::Comma]) {
                    break;
                }
            }
        }
        Ok(args)
    }

    /// 解析结构体字面量: Path { field: val, ... }
    fn parse_struct_literal(&mut self, type_name: Path) -> ParseResult<Expression> {
        let start = type_name.span.start;
        self.expect(TokenKind::LBrace)?;
        
        let mut fields = Vec::new();
        while !self.check(TokenKind::RBrace) && !self.is_at_end() {
            let field_name_tok = self.expect(TokenKind::Identifier)?;
            self.expect(TokenKind::Colon)?;
            let value = self.parse_expr()?;
            
            fields.push(StructFieldInit {
                field_name: Identifier { 
                    name: self.text(field_name_tok).to_string(), 
                    span: field_name_tok.span 
                },
                value,
                span: Span::new(field_name_tok.span.start, self.previous_span().end),
            });

            if !self.match_token(&[TokenKind::Comma]) {
                break;
            }
        }
        
        let end_tok = self.expect(TokenKind::RBrace)?;
        
        Ok(Expression {
            id: self.next_id(),
            kind: ExpressionKind::StructLiteral { type_name, fields },
            span: Span::new(start, end_tok.span.end),
        })
    }
